Closed Bug 1604889 Opened 6 years ago Closed 6 years ago

receiveMessage exceptions are re-reported as NS_ERROR_UNEXPECTED

Categories

(Core :: DOM: Content Processes, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla74
Fission Milestone M6
Tracking Status
firefox74 --- fixed

People

(Reporter: kmag, Assigned: kmag)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.

When we let the WebIDL callback wrapper report exceptions, it returns an error
result of NS_ERROR_UNEXPECTED, which winds up getting set as a promise
rejection reason or re-reported to the console. This just causes unnecessary
confusion for callers, especially since the error has no location information.

Tracking for Fission Nightly (M6)

Fission Milestone: --- → M6

The priority flag is not set for this bug.
:jimm, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(jmathies)

P3 for Fission Nightly (M6) bug

Flags: needinfo?(jmathies)
Priority: -- → P3
Pushed by maglione.k@gmail.com: https://hg.mozilla.org/integration/autoland/rev/ba3c78857a3b Don't rethrow receiveMessage exceptions as NS_ERROR_UNEXPECTED. r=mccr8
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: