Bug 1604889: Don't rethrow receiveMessage exceptions as NS_ERROR_UNEXPECTED. r=mccr8

When we let the WebIDL callback wrapper report exceptions, it returns an error
result of NS_ERROR_UNEXPECTED, which winds up getting set as a promise
rejection reason or re-reported to the console. This just causes unnecessary
confusion for callers, especially since the error has no location information.

Differential Revision: https://phabricator.services.mozilla.com/D57657